--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -48,6 +48,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="RotateBackward",Key=B,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Rotateleft",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RotateRight",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseGame",Key=P,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseGame",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
