--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,40 @@ ProjectName=Third Person BP Game Template
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="M:/Unreal Projects/DES504/")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
++MapsToCook=(FilePath="")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
