--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="M:/Unreal Projects/DES504/")
+StagingDirectory=(Path="M:/Unreal Projects/RotateCastle_team02_ver1.005")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -37,7 +37,9 @@ bCompressed=False
 bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
-+MapsToCook=(FilePath="")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/testformagiccube")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/TestSkyBox")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/Maps/testmap")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
