--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,6 +18,7 @@ MinimumiOSVersion=IOS_9
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/RotateCalste")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/RotateCalste")
+bSmoothFrameRate=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -106,7 +107,7 @@ FrictionCombineMode=Average
 RestitutionCombineMode=Average
 MaxAngularVelocity=3600.000000
 MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
+ContactOffsetMultiplier=0.010000
 MinContactOffset=2.000000
 MaxContactOffset=8.000000
 bSimulateSkeletalMeshOnDedicatedServer=True
@@ -121,7 +122,7 @@ MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
-MaxSubsteps=6
+MaxSubsteps=12
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
