--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/GameMode_Sky.GameMode_Sky_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/roomrotate/enviroment/tuotorial/rotatecastle_gameInstance.rotatecastle_gameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
@@ -127,5 +128,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
