--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=RotateCalste
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/testmap.testmap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/mainmeun.mainmeun
+GameDefaultMap=/Game/ThirdPersonBP/Maps/mediamap.mediamap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
