--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
-StagingDirectory=(Path="M:/Unreal Projects/RotateCastle_team02_ver1.005")
+StagingDirectory=(Path="M:/504/RotateCastle")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -44,6 +44,9 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/MainMaps/Map_03_TunnelA")
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/MainMaps/Map_04_MagicCube")
 +MapsToCook=(FilePath="/Game/ThirdPersonBP/MainMaps/Map_05_Bridge")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/MainMaps/Map_07_FinalStage")
++MapsToCook=(FilePath="/Game/ThirdPersonBP/MainMaps/Map_08_Thanks")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
+
 
